--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,27 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+.board-area {
+  position: relative;
+  margin: 50px auto;
+  width: 400px;
+  height: 400px;
+  border: 1px solid white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.board-dot {
+  position: absolute;
+  width: 5%;
+  height: 5%;
+  background-color: white;
+  border: 1px solid white;
+}
+
+.food-dot {
+  position: absolute;
+  width: 5%;
+  height: 5%;
+  background-color: #18ff85;
+  border: 1px solid #18ff85;
 }
