--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: #141E30;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -14,12 +16,48 @@
 }
 
 
+.heading {
+  background: #00c6ff;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  width: 100%;
+  height: 300px;
+}
+
+
+.top-container {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.main-text {
+  margin-left: 0px;
+}
+
+.main-image {
+  margin-right: 0px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;  
+}
+
+.state-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .board-area {
+  background: #1e3c72;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   position: relative;
-  margin: 50px auto;
+  margin: 40px auto;
   width: 400px;
   height: 400px;
-  border: 1px solid white;
+  border: 2px solid white;
 }
 
 .board-dot {
@@ -27,7 +65,6 @@
   width: 5%;
   height: 5%;
   background-color: white;
-  border: 1px solid white;
 }
 
 .food-dot {
@@ -35,5 +72,9 @@
   width: 5%;
   height: 5%;
   background-color: #18ff85;
-  border: 1px solid #18ff85;
+}
+
+@font-face {
+  font-family: FacileSans;
+  src: url('./font/FacileSans.ttf');
 }
