--- a/src/State.css
+++ b/src/State.css
@@ -1,19 +1,27 @@
-#state-dir-area {
+.state-dir-area {
+    background: #1e3c72;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     float: left;
     position: relative;
-    margin: 50px auto;
-    width: 100px;
-    height: 100px;
-    border: 1px solid white;
+    margin-top: 40px;
+    margin-left: 35px;
+    margin-right: 40px;
+    width: 125px;
+    height: 125px;
+    border: 2px solid white;
 }
 
-#state-apple-area {
+.state-apple-area {
+    background: #1e3c72;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
     float: right;
     position: relative;
-    margin: 50px auto;
-    width: 100px;
-    height: 100px;
-    border: 1px solid white;
+    margin-top: 40px;
+    width: 125px;
+    height: 125px;
+    border: 2px solid white;
 }
 
 .state-dot {
