--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,8 @@
 }
 
 .App-header {
-  background: #141E30;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+  background-color: #2d3436;
+  background-image: linear-gradient(315deg, #000000 0%, #292828 74%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -17,9 +16,8 @@
 
 
 .heading {
-  background: #00c6ff;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #b8c6db;
+  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
   width: 100%;
   height: 300px;
 }
@@ -50,29 +48,29 @@
 }
 
 .board-area {
-  background: #1e3c72;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #b8c6db;
+  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+  width: 100%;
   position: relative;
   margin: 40px auto;
   width: 400px;
   height: 400px;
-  border: 2px solid white;
+  border: 2px solid gray;
 }
 
 .board-dot {
   position: absolute;
   width: 5%;
   height: 5%;
-  background-color: white;
+  background-color: black;
 }
 
 .food-dot {
   position: absolute;
   width: 5%;
   height: 5%;
-  background-color: #18ff85;
-}
+  background-color: #f71735;
+  background-image: linear-gradient(147deg, #f71735 0%, #db3445 74%);}
 
 @font-face {
   font-family: FacileSans;
