--- a/src/State.css
+++ b/src/State.css
@@ -1,7 +1,6 @@
 .state-dir-area {
-    background: #1e3c72;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-color: #b8c6db;
+    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
     float: left;
     position: relative;
     margin-top: 40px;
@@ -9,24 +8,23 @@
     margin-right: 40px;
     width: 125px;
     height: 125px;
-    border: 2px solid white;
+    border: 2px solid gray;
 }
 
 .state-apple-area {
-    background: #1e3c72;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    background-color: #b8c6db;
+    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);   
     float: right;
     position: relative;
     margin-top: 40px;
     width: 125px;
     height: 125px;
-    border: 2px solid white;
+    border: 2px solid gray;
 }
 
 .state-dot {
     position: absolute;
     width: 33%;
     height: 33%;
-    background-color: white;
+    background-color: black;
 }
