--- a/src/App.css
+++ b/src/App.css
@@ -1,78 +1,20 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #2d3436;
-  background-image: linear-gradient(315deg, #000000 0%, #292828 74%);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-
-.heading {
-  background-color: #b8c6db;
-  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
-  width: 100%;
-  height: 300px;
-}
-
-
-.top-container {
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-
-.main-text {
-  margin-left: 0px;
-}
-
-.main-image {
-  margin-right: 0px;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;  
-}
-
-.state-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.board-area {
-  background-color: #b8c6db;
-  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
-  width: 100%;
-  position: relative;
-  margin: 40px auto;
-  width: 400px;
-  height: 400px;
-  border: 2px solid gray;
-}
-
-.board-dot {
-  position: absolute;
-  width: 5%;
-  height: 5%;
-  background-color: black;
-}
-
-.food-dot {
-  position: absolute;
-  width: 5%;
-  height: 5%;
-  background-color: #f71735;
-  background-image: linear-gradient(147deg, #f71735 0%, #db3445 74%);}
-
 @font-face {
   font-family: FacileSans;
   src: url('./font/FacileSans.ttf');
+}
+
+.card-title {
+  text-align: center;
+  color: white;
+}
+.bg-dark {
+  height: 100%;
+}
+.card-text {
+  color: white;
+}
+
+.wrapper {
+  background-color: #b8c6db;
+  background-image: linear-gradient(180deg, #b8c6db 0%, #f5f7fa 74%);
 }
