added testing button, ui changes, info updated

--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,7 @@
 
 .wrapper {
   background-color: #b8c6db;
-  background: #355C7D;  /* fallback for old browsers */
-  background: -webkit-linear-gradient( #C06C84, #6C5B7B, #355C7D);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(#C06C84, #6C5B7B, #355C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+  background-image: linear-gradient(to bottom, #243949 0%, #517fa4 100%);
 }
 
 .board-area {
